# FFMPEGDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ffmpegtest/gmm/www/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  EnjoyPlayer.cpp  EnjoyPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  Log.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/java/com/ffmpegtest/gmm/www/: EnjoyPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ffmpegtest/gmm/www/: ExampleUnitTest.java
